# VibeGuard

./: .gitignore  CLAUDE.md  IMPLEMENTATION_LOG.md  README.md  main.py  pyproject.toml  requirements.txt
evaluation/: __init__.py
tests/: test_ast_parser.py  test_config_parser.py  test_cwe_1035.py  test_cwe_20.py  test_cwe_284.py  test_cwe_287.py  test_cwe_798.py  test_main.py  test_modern_java_preprocessor.py  test_pom_parser.py  test_record_preprocessor.py  test_scanner.py
tests/fixtures/: ClassLevelSecuredResource.java  CleanService.java  Cwe798AdversarialService.java  HardcodedSecretService.java  MalformedService.java  NestedResource.java  UnprotectedResource.java  UnsafeAuthComparison.java  UnvalidatedRequestBody.java  application.properties  application.yml  cwe798-reference.properties  malformed.yml  vulnerable-pom.xml
vibeguard/: __init__.py
vibeguard/layer1_static/: __init__.py  _modern_java_preprocessor.py  _parsing_guards.py  _record_preprocessor.py  ast_parser.py  config_parser.py  pom_parser.py  scanner.py
vibeguard/layer1_static/rules/: __init__.py  _credential_names.py  _endpoint_annotations.py  _finding.py  cwe_1035.py  cwe_20.py  cwe_284.py  cwe_287.py  cwe_798.py
vibeguard/layer2_features/: __init__.py
vibeguard/layer3_scoring/: __init__.py
vibeguard/layer4_ml/: __init__.py
vibeguard/layer5_report/: __init__.py
