[project]
name = "vibeguard"
version = "0.1.0"
description = "Explainable risk assessment for AI-generated Java microservices"
requires-python = ">=3.10,<3.11"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "javalang.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["vibeguard*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
